syntax = "proto3";

// 定义 Java 生成类的包名
package io.github.vevoly.atomicio.example.protobuf.proto;

// 选项：为每个 message 生成独立的 Java 文件
option java_multiple_files = true;

// option java_outer_classname = "IMMessages";

// --- 认证相关 ---

// C -> S (客户端发送给服务器)
// 对应 AtomicIOCommand.LOGIN
message LoginRequest {
  string userId = 1;
  string token = 2;
}

// S -> C (服务器回应给客户端)
// 对应 AtomicIOCommand.LOGIN_RESPONSE
message LoginResponse {
  bool success = 1;      // 是否成功
  int32 code = 2;        // 错误码
  string message = 3;    // 错误信息
  int64 serverTime = 4;  // 服务器当前时间戳，用于客户端时间校准
}


// --- P2P 消息 ---

// C -> S
// 对应 AtomicIOCommand.P2P_MESSAGE
message P2PMessageRequest {
  string toUserId = 1;        // 消息接收者的用户ID
  string content = 2;         // 消息内容
  int64 clientTime = 3;       // 客户端发送时的时间戳
  string clientMessageId = 4; // 客户端生成的消息唯一ID
}

// S -> C
// 服务器将消息转发给接收者时，也使用这个结构
// 对应 AtomicIOCommand.P2P_MESSAGE_NOTIFY
message P2PMessageNotify {
  string fromUserId = 1;      // 消息发送者的用户ID
  string content = 2;         // 消息内容
  int64 serverTime = 3;       // 服务器收到消息时的时间戳
  int64 serverMessageId = 4;  // 服务器生成的消息唯一ID
}

// S -> C
// 对应 AtomicIOCommand.P2P_MESSAGE_ACK
message P2PMessageAck {
  string clientMessageId = 1; // 回应对应的客户端消息ID
  bool success = 2;
  int32 code = 3;
  string message = 4;
  // 返回服务器生成的消息ID，让客户端可以将本地消息与服务器消息关联
  int64 serverMessageId = 5;
  int64 timestamp = 6;
}


// --- 心跳 ---

// C -> S & S -> C
// 对应 AtomicIOCommand.HEARTBEAT
message Heartbeat {
  // 可以为空，也可以带上时间戳用于计算网络延迟 (RTT)
  int64 timestamp = 1;
}